[gd_scene load_steps=2 format=3 uid="uid://cecdgnsa5465"]

[ext_resource type="Script" path="res://menu_scenes/root_scene/menu_root.gd" id="1_y0cw5"]

[node name="menu_root" type="Node2D"]
script = ExtResource("1_y0cw5")

[node name="start_page" type="Node2D" parent="."]

[node name="start_game" type="Button" parent="start_page"]
offset_left = 409.0
offset_top = 95.0
offset_right = 650.0
offset_bottom = 202.0
text = "start game"

[node name="settings" type="Button" parent="start_page"]
offset_left = 412.0
offset_top = 281.0
offset_right = 653.0
offset_bottom = 388.0
text = "settings"

[node name="exit_game" type="Button" parent="start_page"]
offset_left = 413.0
offset_top = 430.0
offset_right = 654.0
offset_bottom = 537.0
text = "exit game
"

[node name="level_editor" type="Button" parent="start_page"]
offset_left = 142.0
offset_top = 284.0
offset_right = 323.0
offset_bottom = 397.0
text = "level editor"

[node name="back" type="Button" parent="."]
offset_left = 996.0
offset_top = 31.0
offset_right = 1092.0
offset_bottom = 88.0
text = "Back"

[connection signal="pressed" from="start_page/start_game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="start_page/level_editor" to="." method="_on_button_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
